--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@ p {
 
 .option:hover {
   background-color: var(--secondary-color);
-  color: var(--white) !important;
+  color: var(--text-color) !important;
 }
 
 .option:focus {
@@ -153,7 +153,7 @@ p {
 
 .option:focus:not(:disabled):hover {
   background-color: var(--secondary-color);
-  color: var(--white);
+  color: var(--text-color);
 }
 
 @keyframes celebrate {
